# model/system/request/sys_user.go
@@ -6,3 +6,15 @@ type Login struct {
 	Captcha   string `json:"captcha"`   // 验证码
 	CaptchaId string `json:"captchaId"` // 验证码ID
 }
+
+type Register struct {
+	Username     string `json:"userName" example:"用户名"`
+	Password     string `json:"passWord" example:"密码"`
+	NickName     string `json:"nickName" example:"昵称"`
+	HeaderImg    string `json:"headerImg" example:"头像链接"`
+	AuthorityId  uint   `json:"authorityId" swaggertype:"string" example:"int 角色id"`
+	Enable       int    `json:"enable" swaggertype:"string" example:"int 是否启用"`
+	AuthorityIds []uint `json:"authorityIds" swaggertype:"string" example:"[]uint 角色id"`
+	Phone        string `json:"phone" example:"电话号码"`
+	Email        string `json:"email" example:"电子邮箱"`
+}
